VRCLoader/Loader/il2cpp.h

extern il2cpp_array_class_get_t il2cpp_array_class_get;
extern il2cpp_array_new_t il2cpp_array_new;
extern il2cpp_class_get_fields_t il2cpp_class_get_fields;
extern il2cpp_class_get_nested_types_t il2cpp_class_get_nested_types;
extern il2cpp_class_get_interfaces_t il2cpp_class_get_interfaces;
extern il2cpp_class_get_properties_t il2cpp_class_get_properties;
extern il2cpp_class_get_methods_t il2cpp_class_get_methods;
extern il2cpp_class_get_name_t il2cpp_class_get_name;
extern il2cpp_class_get_namespace_t il2cpp_class_get_namespace;
extern il2cpp_class_get_flags_t il2cpp_class_get_flags;
extern il2cpp_class_get_type_t il2cpp_class_get_type;
extern il2cpp_class_get_type_token_t il2cpp_class_get_type_token;
extern il2cpp_domain_get_t il2cpp_domain_get;
extern il2cpp_domain_get_assemblies_t il2cpp_domain_get_assemblies;
extern il2cpp_assembly_get_image_t il2cpp_assembly_get_image;
extern il2cpp_field_get_flags_t il2cpp_field_get_flags;
extern il2cpp_field_get_name_t il2cpp_field_get_name;
extern il2cpp_field_get_offset_t il2cpp_field_get_offset;
extern il2cpp_field_get_type_t il2cpp_field_get_type;
extern il2cpp_field_get_value_object_t il2cpp_field_get_value_object;
extern il2cpp_field_set_value_t il2cpp_field_set_value;
extern il2cpp_field_static_set_value_t il2cpp_field_static_set_value;
extern il2cpp_method_get_return_type_t il2cpp_method_get_return_type;
extern il2cpp_method_get_name_t il2cpp_method_get_name;
extern il2cpp_method_get_param_count_t il2cpp_method_get_param_count;
extern il2cpp_method_get_param_t il2cpp_method_get_param;
extern il2cpp_method_get_flags_t il2cpp_method_get_flags;
extern il2cpp_method_get_token_t il2cpp_method_get_token;
extern il2cpp_method_get_param_name_t il2cpp_method_get_param_name;
extern il2cpp_property_get_flags_t il2cpp_property_get_flags;
extern il2cpp_property_get_get_method_t il2cpp_property_get_get_method;
extern il2cpp_property_get_set_method_t il2cpp_property_get_set_method;
extern il2cpp_property_get_name_t il2cpp_property_get_name;
extern il2cpp_object_new_t il2cpp_object_new;
extern il2cpp_object_unbox_t il2cpp_object_unbox;
extern il2cpp_runtime_invoke_t il2cpp_runtime_invoke;
extern il2cpp_string_new_t il2cpp_string_new;
extern il2cpp_string_new_len_t il2cpp_string_new_len;
extern il2cpp_type_get_object_t il2cpp_type_get_object;
extern il2cpp_type_get_name_t il2cpp_type_get_name;
extern il2cpp_image_get_name_t il2cpp_image_get_name;
extern il2cpp_image_get_class_count_t il2cpp_image_get_class_count;
extern il2cpp_image_get_class_t il2cpp_image_get_class;